@@ -39,6 +39,7 @@
       <placeholder name="BookmarksDOC"/>
     </menu>
     <menu action="HelpMenu">
+      <menuitem action="Contents"/>
       <menuitem action="About"/>
     </menu>
   </menubar>
